@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-07T00:50:57Z",
+  "timestamp" : "2023-09-09T08:12:55Z",
   "count_outdated" : 175,
   "uniques_outdated" : 149,
-  "count" : 183,
-  "uniques" : 156,
+  "count" : 184,
+  "uniques" : 157,
   "clones" : [
     {
       "timestamp": "2023-08-27T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2023-09-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
