@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 2,
   "clones": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2023-09-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
