@@ -1,3 +1,12 @@
+2023-09-09T08:12:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6129822108 # 1160
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-09
+* notice: last 14d: unq all: 2 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 149 175 / 156 183
+* notice: next accum: outdated-unq outdated-all / unq all: 149 175 / 157 184
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-09]
+
 2023-09-07T00:50:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6104021982 # 1153
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-07
